# python-starter

./: .gitignore  README.md  cookiecutter.json  mypy.ini  setup.cfg
src/sample_package/: __init__.py
tests/: sample_test.py
{{cookiecutter.project_name}}/: .gitignore  README.md  setup.cfg  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: tox.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.project_name}}/tests/: {{cookiecutter.package_name}}_test.py  {{cookiecutter.project_name|replace('-', '_')}}_test.py
{{cookiecutter.repo_name}}/: LICENSE  README.md
{{cookiecutter.repo_name}}/tests/: {{cookiecutter.project_name}}_test.py
