[metadata]
name = sample_package                           # Package name here
version = 0.1.0
description =                                   # Package description here
long_description = file: README.md
long_description_content_type = text/markdown
url =                                           # Package's github URL here
author =                                        # Your name here
author_email =                                  # Your email here
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
# install_requires =                            # Optional: Add dependencies
#     django>=3.2
#     zxpy>=1.4.4
python_requires = >=3.6
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]                          # Optional: Add an entry point
console_scripts =
    mycommand=sample_package:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    # pylint>=2.9                               # Optional: Add dev dependencies
