[metadata]
name = sample_package                                   # Package name here
version = 0.1.0
description = A minimal Python starter template         # Package description here
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/python_starter  # Package's github URL here
author = Tushar Sadhwani                                # Your name here
author_email = tushar.sadhwani000@gmail.com             # Your email here
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
# install_requires =                            # Optional: Add dependencies
#     django>=3.2
#     zxpy>=1.4.4
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]                          # Optional: Add an entry point
console_scripts =
    mycommand=sample_package:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox
    # pylint>=2.9                               # Optional: Add dev dependencies

[options.package_data]
sample_package =
	py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
