[metadata]
name = {{cookiecutter.project_name}}
version = 0.1.0
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/{{cookiecutter.project_name}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
# install_requires =
#     django>=3.2
#     zxpy>=1.4.4
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    {{cookiecutter.project_name|replace('_', '-')}}={{cookiecutter.project_name|replace('-', '_')}}:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox

[options.package_data]
{{cookiecutter.project_name}} =
	py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
